--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
             <ul class="nav navbar-nav" id="mainNav" style="margin-top: 20px;">
               <li class="active"><a href="#hero_section" class="scroll-link">Home</a></li>
               <li><a href="#service" class="scroll-link">Services</a></li>
-              <li><a href="#service" class="scroll-link">Subscription</a></li>
+              <li><a href="#subscribe" class="scroll-link">Subscription</a></li>
               <li><a href="#aboutUs" class="scroll-link">About Us</a></li>
               <li><a href="#contact" class="scroll-link">Contact</a></li>
             </ul>
@@ -160,7 +160,7 @@
 
     </div>
   </section>
-  <section id="hero_section" class="top_cont_outer">
+  <section id="subscribe" class="top_cont_outer">
     <div class="hero_wrapper" style="background-color: aquamarine">
       <div class="container">
         <div class="hero_section">
@@ -218,12 +218,7 @@
       </div>
     </div>
   </section>
-  <!--Aboutus-->
 
-
-  <!--Service-->
-
-  <!--Service-->
 
 
 
