Changed costing,school field, payment ss, done.htm

--- a/templates/payment.html
+++ b/templates/payment.html
@@ -87,7 +87,7 @@
         <input class="block w-full text-lg text-blue-900 border border-gray-300 rounded-lg cursor-pointer bg-blue-50 dark:text-black-400 focus:outline-none dark:bg-white-900  dark:placeholder-black-400" name="payment" id="multiple_files" type="file" required style="width: 50%;margin-bottom: 2%;">
         <div class="flex justify-center">
           <button class="inline-flex text-white bg-blue-500 border-0  focus:outline-none hover:bg-indigo-600 rounded text-x1 lg:text-2xl px-10 py-6" type="submit">Submit</button>
-
+          <input type="text" value={{cost}} name="cost" style="display: none;">
           <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-6 px-10 focus:outline-none hover:bg-gray-200 rounded lg:text-2xl "><a href="/">Cancel</a></button>
         </div>
       </div>
