--- a/templates/order_a.html
+++ b/templates/order_a.html
@@ -131,10 +131,7 @@ input[type=file]::file-selector-button:hover {
           <div class="p-2 w-1/2">
             <div class="relative">
               <label  class="leading-7 text-sm text-gray-600" style="font-size: medium;">School *</label>
-              <select data-te-select-init style="margin-top: 5%;margin-left: 10%;border: 1px solid black;font-size: medium;border-radius: 5px;" name="school">
-                <option value="Glendel Academy">Glendel Academy</option>
-                
-              </select>
+              <input type="text" id="mobile" name="school" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out" required style="font-size: medium;">
             </div>
           </div>
           <div class="p-2 w-1/2">
