--- a/templates/payment.html
+++ b/templates/payment.html
@@ -76,6 +76,8 @@
   <section class="text-gray-600 body-font lg:ml-60">
     <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
       <div class="lg:max-w-lg lg:w-full lg:ml-80  md:w-1/2 w-5/6 mb-10 md:mb-0">
+        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900" style="margin-left:20%">Mobile: 8639397741
+        </h1>
         <img class="object-cover object-center rounded" alt="hero" src="static/img/qr.jpg">
       </div>
       <div class="lg:flex-grow md:w-1/2 lg:pl-40 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
