--- a/templates/order_a.html
+++ b/templates/order_a.html
@@ -179,6 +179,22 @@ input[type=file]::file-selector-button:hover {
                         </select>
                       </div>
                     </div>
+                    <div class="p-2 ">
+                      <div class="relative">
+                        <label  class="leading-7 text-sm text-gray-600" style="font-size: medium;">Select Delivery Address*</label>
+                        <select data-te-select-init style="margin-top: 5%;margin-left: 10%;border: 1px solid black;font-size: medium;border-radius: 5px;" name="delivery">
+                          <option value="School">School</option>
+                          <option value="Other">Other</option>
+                          
+                        </select>
+                      </div>
+                    </div>
+          <div class="p-2 w-full">
+            <div class="relative">
+              <label for="message" class="leading-7 text-sm text-gray-600" style="font-size: medium;">Please provide address for delivery (if not delivering to school)</label >
+              <textarea id="message" name="delivery_address" class="w-3/4 bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out" style="font-size: medium;"></textarea>
+            </div>
+          </div>
           <div class="p-2 w-full">
             <div class="relative">
               <label for="message" class="leading-7 text-sm text-gray-600" style="font-size: medium;">Front Page and Border Instructions (if any)</label >
