--- a/templates/order_a.html
+++ b/templates/order_a.html
@@ -191,7 +191,7 @@ input[type=file]::file-selector-button:hover {
                     </div>
           <div class="p-2 w-full">
             <div class="relative">
-              <label for="message" class="leading-7 text-sm text-gray-600" style="font-size: medium;">Please provide address for delivery (if not delivering to school)</label >
+              <label for="message" class="leading-7 text-sm text-gray-600" style="font-size: medium;">Please provide address for delivery (if not delivering at school)</label >
               <textarea id="message" name="delivery_address" class="w-3/4 bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out" style="font-size: medium;"></textarea>
             </div>
           </div>
