--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
 
   <!--Hero_Section-->
   <section id="hero_section" class="top_cont_outer">
-    <div class="hero_wrapper" style="background-color: blue">
+    <div class="hero_wrapper" style="background-color: #071952">
       <div class="container">
         <div class="hero_section">
           <div class="row">
@@ -121,7 +121,7 @@
       <div class="service_wrapper">
 
         <div class="col-lg-4">
-          <div class="service_block">
+          <div class="service_block" style="background-color: #071952">
             <div class="service_icon delay-03s animated wow  zoomIn"><button
                 style="margin-top: 20%;width: 100%;padding:6% 10%;font-size: large;border-radius: 20px;background-color: whitesmoke;color: black;"><a
                   href="{% url 'index' %}?work=Assignment" style="color: black;">Order</a></button> </div>
@@ -132,7 +132,7 @@
           </div>
         </div>
         <div class="col-lg-4 borderLeft">
-          <div class="service_block">
+          <div class="service_block" style="background-color: #071952">
             <div class="service_icon icon2  delay-03s animated wow zoomIn">
               <button
                 style="margin-top: 20%;width: 100%;padding:6% 10%;font-size: large;border-radius: 20px;background-color: whitesmoke;color: black;"><a
@@ -145,7 +145,7 @@
           </div>
         </div>
         <div class="col-lg-4 borderLeft" style="opacity: 0.5;">
-          <div class="service_block">
+          <div class="service_block" style="background-color: #071952">
             <div class="service_icon icon3  delay-03s animated wow zoomIn"><button
                 style="margin-top: 20%;width: 100%;padding:6% 10%;font-size: large;border-radius: 20px;background-color: whitesmoke;">
                 <a href="/" style="color: black;">Order</a></button> </div>
