--- a/templates/index.html
+++ b/templates/index.html
@@ -161,17 +161,17 @@
     </div>
   </section>
   <section id="subscribe" class="top_cont_outer">
-    <div class="hero_wrapper" style="background-color: aquamarine">
+    <div class="hero_wrapper" style="background-color: #071952">
       <div class="container">
         <div class="hero_section">
           <div class="row">
             <div class="col-lg-5 col-sm-7">
               <div class="top_left_cont zoomIn wow animated">
-                <h2><strong style="color: black;"> Subscribe to SkipWork </strong></h2>
-                <p style="color: rgb(53, 47, 47);">Empower your academic journey and stay ahead with our top-notch
+                <h2><strong style="color: white;"> Subscribe to SkipWork </strong></h2>
+                <p style="color: white">Empower your academic journey and stay ahead with our top-notch
                   services. Plus, subscribe to our website for the latest updates, exclusive offers, and a seamless learning
                   experience that goes beyond expectations.</p>
-                  <button style="background-color: black;color: white;padding: 3% 5%;font-size: larger;border-radius: 10%;">Subscribe</button>
+                  <button style="background-color: white;color: black;padding: 3% 5%;font-size: larger;border-radius: 10%;">Subscribe</button>
               </div>
 
             </div>
