--- a/templates/payment.html
+++ b/templates/payment.html
@@ -82,7 +82,7 @@
         <img class="object-cover object-center rounded" alt="hero" src="static/img/qr.jpg">
       </div>
       <div class="lg:flex-grow md:w-1/2 lg:pl-40 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Payment: ₹{{cost}}/-
+        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Make Half Payment: ₹{{cost}}/-
         </h1>
         <p class="mb-8 leading-relaxed">Please upload the pdf of content to be written</p>
         <input class="block w-full text-lg text-blue-900 border border-gray-300 rounded-lg cursor-pointer bg-blue-50 dark:text-black-400 focus:outline-none dark:bg-white-900  dark:placeholder-black-400" name="pdf" id="multiple_files" type="file" required style="width: 50%;margin-bottom: 2%;">
