Changed the contact section bg color

--- a/templates/index.html
+++ b/templates/index.html
@@ -225,7 +225,7 @@
 
   <!--Footer-->
   <footer class="footer_wrapper" id="contact">
-    <div class="container">
+    <div class="container" style="background-color: #071952">
       <section class="page_section contact" id="contact">
         <div class="contact_section">
           <h2>Contact Us</h2>
